[OBSDEF-2797] Add the client for rebuild status
Signed-off-by: Youmin_Han <Youmin_Han@dell.com>

--- a/pkg/client/rest/crr/fixtures.yaml
+++ b/pkg/client/rest/crr/fixtures.yaml
@@ -5,7 +5,7 @@ interactions:
       body: ""
       form: {}
       headers: {}
-      url: https://testserver/login
+      url: https://testgateway/mgmt/login
       method: GET
     response:
       body: <?xml version="1.0" encoding="UTF-8" standalone="yes"?><loggedIn><user>130820808912778549-admin</user></loggedIn>
