--- a/pkg/client/rest/objmt/objmt_fixtures.yaml
+++ b/pkg/client/rest/objmt/objmt_fixtures.yaml
@@ -5,7 +5,7 @@ interactions:
       body: ""
       form: { }
       headers: { }
-      url: https://testserver:443/login
+      url: https://testgateway/mgmt/login
       method: GET
     response:
       status: 200 OK
