--- a/pkg/client/rest/objectuser/fixtures.yaml
+++ b/pkg/client/rest/objectuser/fixtures.yaml
@@ -5,7 +5,7 @@ interactions:
     body: ""
     form: {}
     headers: {}
-    url: https://testserver:443/login
+    url: https://testgateway/mgmt/login
     method: GET
   response:
     body: <?xml version="1.0" encoding="UTF-8" standalone="yes"?><loggedIn><user>root</user></loggedIn>
