--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Run the formatter, linter, and vetter
         uses: dell/common-github-actions/go-code-formatter-linter-vetter@main
         with:
-          directories: ./pkg/...
+          directories: ./... #TODO: verify when actual code is in the repo
 
   gosec:
     runs-on: ubuntu-latest
@@ -26,7 +26,7 @@ jobs:
       - name: Run Gosec Security Scanner
         uses: securego/gosec@master
         with:
-          args: ./... 
+          args: ./... #TODO: verify when actual code is in the repo
 
   malware_security_scan:
       name: Malware Scanner
@@ -37,7 +37,7 @@ jobs:
         - name: Malware Scanner
           uses: dell/common-github-actions/malware-scanner@main
           with:
-            directories: .
+            directories: . #TODO: verify when actual code is in the repo
             options: -ri
 
   code-sanitizer:
@@ -49,7 +49,7 @@ jobs:
       - name: Run the forbidden words scan
         uses: dell/common-github-actions/code-sanitizer@main
         with:
-          args: .
+          args: /github/workspace/ #TODO: verify when actual code is in the repo
 
   tests:
     name: Run Go unit tests and check package coverage
@@ -61,4 +61,4 @@ jobs:
         uses: dell/common-github-actions/go-code-tester@main
         with:
           threshold: 90
-          test-folder: "."
+          test-folder: "." #TODO: verify when actual code is in the repo
