Remove push trigger for the usr/ branch from Github Actions definition

--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -1,7 +1,7 @@
 name: Workflow
 on:
   push:
-    branches: [ main, usr/mtrajfacki-dell/KRV-11147 ]
+    branches: [ main ]
   pull_request:
     branches: [ main ] 
 jobs:
