start scanning from /pkg

--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -2,12 +2,8 @@ name: Workflow
 on:
   push:
     branches: [ main ]
-    paths-ignore:
-    - '**/Makefile'
   pull_request:
     branches: [ main ] 
-    paths-ignore:
-    - '**/Makefile'
 jobs:
   code-check:
     name: Check formatting, linting, vetting
@@ -53,7 +49,7 @@ jobs:
       - name: Run the forbidden words scan
         uses: dell/common-github-actions/code-sanitizer@main
         with:
-          args: /github/workspace/ #TODO: verify when actual code is in the repo
+          args: /github/workspace/pkg #TODO: verify when actual code is in the repo
 
   tests:
     name: Run Go unit tests and check package coverage
