--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,7 +1,4 @@
 run:
-  # The default concurrency value is the number of available CPU.
-  concurrency: 4
-
   # Timeout for analysis, e.g. 30s, 5m.
   timeout: 5m
 
@@ -44,16 +41,6 @@ issues:
   new: false
 
 output:
-  # Format: colored-line-number|line-number|json|tab|checkstyle|code-climate|junit-xml|github-actions|teamcity
-  #
-  # Multiple can be specified by separating them by comma, output can be provided
-  # for each of them by separating format name and path by colon symbol.
-  # Output path can be either `stdout`, `stderr` or path to the file to write to.
-  # Example: "checkstyle:report.xml,json:stdout,colored-line-number"
-  #
-  # Default: colored-line-number
-  format: colored-line-number:stdout
-
   # Print linter name in the end of issue text.
   # Default: true
   print-linter-name: true
@@ -127,6 +114,8 @@ linters:
     - misspell
     # Find incorrect usages of t.Parallel().
     - paralleltest
+    # Drop-in replacement of golint.
+    - revive
     # Find bugs and performance issues statically.
     - staticcheck
     # Parse and type-check Go code.
