--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -8,7 +8,7 @@ on:
   workflow_call:
     secrets:
       GH_DELL_ACCESS:
-        description: 'A token passed from the caller workflow'
+        description: "A token passed from the caller workflow"
         required: true
 
 permissions:
@@ -29,7 +29,7 @@ jobs:
           echo "machine github.com login csmbot password $TOKEN" >> ~/.netrc
       - uses: actions/setup-go@v4
         with:
-          go-version: "1.20"
+          go-version: "1.21"
           cache: false
       - name: Checkout the code
         uses: actions/checkout@v3.2.0
@@ -53,7 +53,7 @@ jobs:
         uses: dell/common-github-actions/malware-scanner@main
         with:
           directories: .
-          options: '--recursive --infected'
+          options: "--recursive --infected"
 
   code-sanitizer:
     name: Check for forbidden words
@@ -76,7 +76,7 @@ jobs:
         uses: ludeeus/action-shellcheck@master
       - uses: actions/setup-go@v4
         with:
-          go-version: "1.20"
+          go-version: "1.21"
           cache: false
       - name: Install and run Checkmake
         run: |
