--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -23,24 +23,19 @@ jobs:
     name: golangci-lint
     runs-on: ubuntu-latest
     steps:
-      - name: Configure git for private modules
-        run: |
-          git config --global url."https://csmbot:$TOKEN@github.com".insteadOf "https://github.com"
-          echo "machine github.com login csmbot password $TOKEN" >> ~/.netrc
-      - uses: actions/setup-go@v4
+      - uses: actions/setup-go@v5
         with:
           go-version: "1.22"
           cache: false
       - name: Checkout the code
-        uses: actions/checkout@v3.2.0
+        uses: actions/checkout@v4
       - name: Vendor packages
         run: |
           go mod vendor
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3
+        uses: golangci/golangci-lint-action@v4
         with:
-          # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
-          version: v1.53
+          version: latest
           skip-cache: true
 
   malware-security-scan:
