--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -7,13 +7,13 @@
 # be requested for review when someone opens a pull request.
 # Order is alphabetical for easier maintenance.
 #
-# Adam Ginna (adamginna-dell)
-# Bogdan Novikov (bogdanNovikovDell)
-# Bartosz Ciesielczyk (cbartoszDell)
-# Leonard Ulman (Leonard-Dell)
-# Małgorzata Dutka (mdutka-dell)
-# Marcin Trajfacki (mtrajfacki-dell)
-# Mateusz Urbanek (shanduur-dell)
+# Adarsh Kumar Yadav (adarsh-dell)
+# Akshay Saini (AkshaySainiDell)
+# Don Khan (donatwork)
+# Jooseppi Luna (jooseppi-luna)
+# Santhosh Lakshmanan (santhoshatdell)
+# Trevor Dawe (tdawe)
 
 # for all files
-* @adamginna-dell @bogdanNovikovDell @cbartoszDell @Leonard-Dell @mdutka-dell @mtrajfacki-dell @shanduur-dell
+* @adarsh-dell @AkshaySainiDell @donatwork @jooseppi-luna @santhoshatdell @tdawe
+
