--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -11,9 +11,7 @@
 # Akshay Saini (AkshaySainiDell)
 # Don Khan (donatwork)
 # Jooseppi Luna (jooseppi-luna)
-# Santhosh Lakshmanan (santhoshatdell)
 # Trevor Dawe (tdawe)
 
 # for all files
-* @adarsh-dell @AkshaySainiDell @donatwork @jooseppi-luna @santhoshatdell @tdawe
-
+* @adarsh-dell @AkshaySainiDell @donatwork @jooseppi-luna @tdawe
